--- a/main.html
+++ b/main.html
@@ -10,6 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol>
+		<li>Apple</li>
+		<li>Banana</li>
+		<li>Orange</li>
+	</ol>
+	<ul>
+		<li>Goa</li>
+		<li>Mumbai</li>
+		<li>Hydrabad</li>
+	</ul>
 
 </body>
 
