--- a/main.html
+++ b/main.html
@@ -11,14 +11,14 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<ol>
-		<li>Apple</li>
-		<li>Banana</li>
-		<li>Orange</li>
+		<li data-ns-test="shoppingList">Apple</li>
+		<li data-ns-test="shoppingList">Banana</li>
+		<li data-ns-test="shoppingList">Orange</li>
 	</ol>
 	<ul>
-		<li>Goa</li>
-		<li>Mumbai</li>
-		<li>Hydrabad</li>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="holidayList">Mumbai</li>
+		<li data-ns-test="holidayList">Hydrabad</li>
 	</ul>
 
 </body>
